# BiliNote_slim

./: .env.example  AGENTS.md  CHANGELOG.md  README.md  dev.bat  dev.sh  frontend_url_platform_test.ts  platform_source_handler_test.ts  start_dev.bat  start_dev.ps1  start_dev.sh
.claude/: settings.local.json
backend/: .env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_api_error_format.py  test_platform_auto_detection.py
backend/app/downloaders/: bilibili_downloader.py  youtube_downloader.py
backend/app/exceptions/: __init__.py  platform_exceptions.py
backend/app/routers/: note.py
backend/app/services/: constant.py  note.py
backend/app/transcriber/: transcriber_provider.py
backend/app/utils/: __init__.py  note_helper.py  platform_detector.py  response.py  url_parser.py
backend/app/validators/: video_url_validator.py
backend/tests/: __init__.py  conftest.py  test_integration.py  test_note_router.py  test_note_service.py  test_platform_detector.py  test_url_parser.py  test_video_url_validator.py
backend/tests/integration/: test_api_health.py  test_model_api.py  test_provider_api.py  test_task_status_api.py
backend/tests/property/: test_api_key_masking_props.py  test_invalid_url_props.py  test_provider_persistence_props.py  test_response_format_props.py  test_screenshot_extraction_props.py  test_task_id_props.py  test_task_ordering_props.py  test_url_parsing_props.py
backend/tests/unit/: test_database.py  test_note_service.py  test_provider_service.py  test_response.py  test_url_parser.py
(+31 files in other folders)
